# photoshop-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.ja.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml  test.yml
cli/: auto_commands.py  main.py  output.py  schema_gen.py
cli/commands/: document.py  file.py  mcp.py  schema.py  system.py
docs/plans/: 2026-03-10-agent-dx-design.md  2026-03-10-agent-dx-plan.md  2026-03-11-full-commands-plan.md  2026-03-11-mcp-phase2-design.md  2026-03-11-mcp-phase2-plan.md
mcp_server/: _run.py  connection.py  instructions.py  server.py  tool_registry.py
photoshop_sdk/: client.py  exceptions.py  paths.py  schema.py  validators.py  ws_bridge.py
plugin/.claude-plugin/: plugin.json
plugin/skills/photoshop-cli/: SKILL.md
scripts/: check_version_sync.py  sync_version.py
tests/: conftest.py
tests/fixtures/: conftest.py  mock_uxp_client.py
tests/integration/: test_file_workflow.py
tests/unit/: test_mcp_server.py
tests/unit/cli/: test_auto_commands.py  test_dry_run.py  test_fields.py  test_file_commands.py  test_main.py  test_mcp.py  test_output.py  test_schema_cmd.py  test_system_commands.py
tests/unit/mcp/: test_command_schemas.py  test_connection.py  test_integration.py  test_tool_registry.py
tests/unit/scripts/: test_check_version_sync.py  test_sync_version.py
tests/unit/sdk/: test_client.py  test_exceptions.py  test_paths.py  test_schema.py  test_validators.py  test_ws_bridge.py
uxp-plugin/: manifest.json  package-lock.json  package.json  tsconfig.json
uxp-plugin/src/: dispatcher.ts  index.ts  uxp-globals.d.ts  ws_client.ts
uxp-plugin/src/handlers/: file.ts
